--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
     </div>
   </section>
 
+  <!-- Assets -->
+  <section style="display: none;">
+    <img id="firework-unexploded" src="images/firework_unexploded.png" alt="Unexploded firework image" />
+  </section>
+
   <!-- Libraries -->
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
     integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
@@ -40,6 +45,11 @@
 
   <!-- Config parsing -->
   <script src="src/config_parser.js"></script>
+
+  <!-- Classes -->
+  <script src="src/vector.js"></script>
+  <script src="src/firework_particle.js"></script>
+  <script src="src/firework.js"></script>
 
   <!-- Main -->
   <script src="index.js"></script>
