--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
   <canvas id="canvas"></canvas>
-  <!-- <section id="parameter-config" class="dropup dropdown" aria-labelledby="config-dropdown-btn">
+  <section id="parameter-config" class="dropup dropdown" aria-labelledby="config-dropdown-btn">
     <button type="button" id="config-dropdown-btn" class="overlay-button btn btn-secondary dropdown-toggle"
       data-toggle="dropdown" aria-haspopup="true">
       Config
@@ -24,7 +24,7 @@
         <button id="share-btn" class="btn btn-info float-right">Share</button>
       </div>
     </div>
-  </section> -->
+  </section>
 
   <!-- Assets -->
   <section style="display: none;">
